# ROSCO

./: .gitignore  README.md  pack-release.sh
RockCollect/: App.config  ChooseTile.Designer.cs  ChooseTile.cs  Dbf.cs  Files.cs  Form1.Designer.cs  Form1.cs  Form1.resx  GDALSerializer.cs  GdalConfiguration.cs  GdalConfiguration.vb  Image.cs  Logger.cs  Program.cs  RockCollect.csproj  RockCollect.sln  RockDetector.cs  Stage.cs  StatusWindow.Designer.cs  StatusWindow.cs  Util.cs  Workflow.cs  clear-icon-cache.ps1  convert-icon.ps1  packages.config
RockCollect/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
RockCollect/Rocklist/: CombinedRockListParser.cs  CurrentRockListParser.cs  LegacyRockListParser.cs  RockListParser.cs  Rocklist.cs
RockCollect/Stages/: ChooseImage.cs  ChooseImageUI.Designer.cs  ChooseImageUI.cs  ChooseImageUI.resx  ImageThreshold.cs  ImageThresholdStatusUI.Designer.cs  ImageThresholdStatusUI.cs  ImageThresholdUI.Designer.cs  ImageThresholdUI.cs  RefineShadows.cs  RefineShadowsStatusUI.Designer.cs  RefineShadowsStatusUI.cs  RefineShadowsStatusUI.resx  RefineShadowsUI.Designer.cs  RefineShadowsUI.cs  ReviewRocks.cs  ReviewRocksStatusUI.Designer.cs  ReviewRocksStatusUI.cs  ReviewRocksStatusUI.resx  ReviewRocksUI.Designer.cs  ReviewRocksUI.cs  TileSelect.cs  TileSelectUI.Designer.cs  TileSelectUI.cs
RockDetector/: AH_RockModel.c  AH_RockModel.h  AH_RockUtils.c  AH_RockUtils.h  AH_Rocks.c  AH_Rocks.h  CMakeLists.txt  DoubleMatrix.c  DoubleMatrix.h  PGM.c  PGM.h  RockDetector.c  RockDetectorPy.i
RockDetector/python/: RockDetector.py
RockDetector/test/: ESP_046282_Rocks_north_bot.txt  ESP_046282_params.txt  README.md  runtests.c  small.pgm
